--- a/HalloAppClip/es.lproj/Localizable.strings
+++ b/HalloAppClip/es.lproj/Localizable.strings
@@ -79,6 +79,15 @@
 /* Title for generic delete button. */
 "Delete" = "Eliminar";
 
+/* Describes what 'All Contacts' feed privacy setting means. */
+"feed.privacy.descr.all" = "Compartir con mis contactos";
+
+/* Describes what 'All Contacts' feed privacy setting means. */
+"feed.privacy.descr.except" = "Compartir con mis contactos excepto con la gente que yo seleccione";
+
+/* Describes what 'All Contacts' feed privacy setting means. */
+"feed.privacy.descr.only" = "Solo compartir con contactos seleccionados";
+
 /* Title for exit button that closes the app */
 "home.update.notice.button.exit" = "Salir";
 
@@ -177,6 +186,9 @@
 
 /* String to auto-fill if a user tried to share to a friend. */
 "settings.share.text" = "Únete a mi red social de relaciones verdaderas en HalloApp. Bájalo gratis en halloapp.com/dl";
+
+/* Row in Settings screen */
+"title.privacy" = "Privacidad";
 
 /* Displayed in place of contact name if name is not known. */
 "unknown.contact" = "Contacto desconocido";
