--- a/Halloapp/fa.lproj/Localizable.strings
+++ b/Halloapp/fa.lproj/Localizable.strings
@@ -130,6 +130,33 @@
 /* Title for generic Update button. Mostly used to complete some modal flow. */
 "button.update" = "به روز رسانی";
 
+/* Label for button that opens chat during call */
+"call.button.chat" = "گفتگو";
+
+/* Label for button that ends call */
+"call.button.end" = "پایان تماس\n";
+
+/* Label for button that toggles mute status during call */
+"call.button.mute" = "بی‌صدا کردن";
+
+/* Label for button that toggles speakerphone status during call */
+"call.button.speaker" = "بلندگو";
+
+/* Status displayed when outgoing call starts */
+"call.status.calling" = "در حال تماس...";
+
+/* Status displayed while call is connecting */
+"call.status.connecting" = "در حال اتصال...";
+
+/* Status displayed when incoming call starts */
+"call.status.incoming" = "تماس دریافتی";
+
+/* Status displayed when reconnecting during call */
+"call.status.reconnecting" = "برقراری ارتباط...";
+
+/* Status displayed while outgoing call is ringing */
+"call.status.ringing" = "در حال زنگ خوردن...";
+
 /* Generic error when trying to use camera */
 "camera.error" = "خطا در دوربین";
 
@@ -427,7 +454,7 @@
 /* VoiceOver label for text post button in floating compose post menu in Home view. */
 "fab.accessibility.text" = "متن";
 
-/* VoiceOver label for voice note button in floating compose post menu in Home view. */
+/* VoiceOver label for audio post button in floating compose post menu in Home view. */
 "fab.accessibility.voice" = "پیام صوتی";
 
 /* Shown while content is being retracted from feed */
@@ -1011,6 +1038,9 @@
 
 /* A label for the button which leads to the page showing groups in common */
 "profile.groups.in.common" = "گروه‌های مشترک";
+
+/* This is a verb.  The text is clickable, under a contact name and starts a voice call with that contact. It should not be translated as a noun. */
+"profile.header.call.user" = "تماس";
 
 /* This is a verb.  The text is clickable, under a contact name and takes the user to the chat screen with that contact. It should not be translated as a noun. */
 "profile.header.message.user" = "پیام";
