--- a/Halloapp/nl.lproj/InfoPlist.strings
+++ b/Halloapp/nl.lproj/InfoPlist.strings
@@ -8,7 +8,7 @@
 "NSContactsUsageDescription" = "Upload je contacten naar de servers van HalloApp zodat je de posts van je vrienden kunt zien en zij die van jou.";
 
 /* Privacy - Microphone Usage Description */
-"NSMicrophoneUsageDescription" = "Dit zorgt ervoor dat je video's met geluid kunt opnemen.";
+"NSMicrophoneUsageDescription" = "Dit zorgt ervoor dat je kunt bellen, audio- en spraakberichten kunt verzenden en video's met geluid kunt opnemen.";
 
 /* Privacy - Photo Library Usage Description */
 "NSPhotoLibraryUsageDescription" = "Dit zorgt ervoor dat je foto's en video's uit je bibliotheek kunt delen en gemaakte items kunt opslaan.";
