--- a/Halloapp/ru.lproj/Localizable.strings
+++ b/Halloapp/ru.lproj/Localizable.strings
@@ -130,6 +130,33 @@
 /* Title for generic Update button. Mostly used to complete some modal flow. */
 "button.update" = "Обновить";
 
+/* Label for button that opens chat during call */
+"call.button.chat" = "чат";
+
+/* Label for button that ends call */
+"call.button.end" = "завершить звонок";
+
+/* Label for button that toggles mute status during call */
+"call.button.mute" = "отключить звук";
+
+/* Label for button that toggles speakerphone status during call */
+"call.button.speaker" = "громкая связь";
+
+/* Status displayed when outgoing call starts */
+"call.status.calling" = "звонит...";
+
+/* Status displayed while call is connecting */
+"call.status.connecting" = "подключается...";
+
+/* Status displayed when incoming call starts */
+"call.status.incoming" = "входящий звонок";
+
+/* Status displayed when reconnecting during call */
+"call.status.reconnecting" = "повторное подключение...";
+
+/* Status displayed while outgoing call is ringing */
+"call.status.ringing" = "звонит...";
+
 /* Generic error when trying to use camera */
 "camera.error" = "Ошибка камеры";
 
@@ -171,6 +198,9 @@
 
 /* Text shown at the top of the chat screen informing the user that the chat is end-to-end encrypted */
 "chat.encryption.label" = "Чаты зашифрованы сквозным шифрованием, и HalloApp не имеет к ним доступа. Нажмите, чтобы узнать больше.";
+
+/* Text shown in Chat when the security keys of the contact user is chatting with, have changed */
+"chat.event.security.keys.changed" = "Электронные ключи с %@ изменены";
 
 /* Message text shown with the user who joined the group via invite link */
 "chat.group.event.join" = "%@ присоединился(-ась) к группе по ссылке-приглашению в группу";
@@ -331,11 +361,17 @@
 /* Title for audio post composer */
 "composer.audio.title" = "Новая аудиозапись";
 
+/* Title warning that a voice recording will be deleted */
+"composer.delete.recording.title" = "Удалить запись?";
+
 /* Show the user that the title is tappable */
 "composer.deletevoicenote.message" = "Голосовая запись не будет сохранена, если вы откажетесь от этого поста.";
 
 /* Title for alert when closing the post composer with a voice note */
 "composer.deletevoicenote.title" = "Отменить пост?";
+
+/* Label shown when only single media item selected */
+"composer.label.more" = "Добавить еще";
 
 /* Alert message in composer when a video is too long */
 "composer.max.video.length.message" = "Выберите другое видео или коснитесь кнопки редактирования.";
@@ -418,7 +454,7 @@
 /* VoiceOver label for text post button in floating compose post menu in Home view. */
 "fab.accessibility.text" = "Текст";
 
-/* VoiceOver label for voice note button in floating compose post menu in Home view. */
+/* VoiceOver label for audio post button in floating compose post menu in Home view. */
 "fab.accessibility.voice" = "Голосовая заметка";
 
 /* Shown while content is being retracted from feed */
@@ -1002,6 +1038,9 @@
 
 /* A label for the button which leads to the page showing groups in common */
 "profile.groups.in.common" = "Общие группы";
+
+/* This is a verb.  The text is clickable, under a contact name and starts a voice call with that contact. It should not be translated as a noun. */
+"profile.header.call.user" = "звонок";
 
 /* This is a verb.  The text is clickable, under a contact name and takes the user to the chat screen with that contact. It should not be translated as a noun. */
 "profile.header.message.user" = "Отправить сообщение";
