--- a/Share Extension/de.lproj/Localizable.strings
+++ b/Share Extension/de.lproj/Localizable.strings
@@ -76,6 +76,15 @@
 /* Title for generic delete button. */
 "Delete" = "Löschen";
 
+/* Describes what 'All Contacts' feed privacy setting means. */
+"feed.privacy.descr.all" = "Mit all meinen Kontakten teilen";
+
+/* Describes what 'All Contacts' feed privacy setting means. */
+"feed.privacy.descr.except" = "Mit meinen Kontakten teilen außer Ausgewählten";
+
+/* Describes what 'All Contacts' feed privacy setting means. */
+"feed.privacy.descr.only" = "Nur mit ausgewählten Kontakten teilen";
+
 /* Generic label for search, mostly used as placeholder text for searchbar */
 "label.search" = "Suchen";
 
@@ -96,6 +105,9 @@
 
 /* String to auto-fill if a user tried to share to a friend. */
 "settings.share.text" = "Mach mit bei meinem HalloApp-Netzwerk für echte Beziehungen! Kostenlos herunterladen auf halloapp.com/dl";
+
+/* Label above the list with whom you share */
+"share.composer.destinations.label" = "Teilen mit";
 
 /* Placeholder for media caption. */
 "share.composer.placeholder" = "Bildunterschrift";
@@ -121,17 +133,17 @@
 /* Alert dialog title shown when uploading fails. */
 "share.composer.uploading.fail.title" = "Upload fehlgeschlagen";
 
-/* Alert dialog title shown when uploading begins. */
-"share.composer.uploading.title" = "Wird hochgeladen...";
-
 /* Contacts category label */
-"share.destination.contacts" = "Kontakte";
+"share.destination.contacts" = "Neue Kontakte";
 
 /* Groups category label */
-"share.destination.groups" = "Gruppen";
+"share.destination.groups" = "Deine Gruppen";
 
 /* Share on the home feed label */
 "share.destination.home" = "Home";
+
+/* Share on the home feed selection cell */
+"share.destination.new" = "Neuer Beitrag";
 
 /* Destination screen title */
 "share.destination.title" = "HalloApp";
@@ -142,6 +154,15 @@
 /* Title of alert when user is not logged in */
 "share.notlogged.title" = "Du bist nicht eingeloggt.";
 
+/* Row in Settings screen */
+"title.privacy" = "Privatsphäre";
+
 /* Displayed in place of contact name if name is not known. */
 "unknown.contact" = "Kontakt unbekannt";
+
+/* How many bytes from total have been uploaded */
+"uploading.bytes.progress" = "%1$@ von %2$@";
+
+/* Message how many items are currently being upload */
+"uploading.n.items" = "uploading.n.items";
 
