--- a/Share Extension/es.lproj/Localizable.strings
+++ b/Share Extension/es.lproj/Localizable.strings
@@ -76,6 +76,15 @@
 /* Title for generic delete button. */
 "Delete" = "Eliminar";
 
+/* Describes what 'All Contacts' feed privacy setting means. */
+"feed.privacy.descr.all" = "Comparte con todos mis contactos";
+
+/* Describes what 'All Contacts' feed privacy setting means. */
+"feed.privacy.descr.except" = "Comparte con todos mis contactos excepto con la gente que yo seleccione";
+
+/* Describes what 'All Contacts' feed privacy setting means. */
+"feed.privacy.descr.only" = "Solo comparte con contactos seleccionados";
+
 /* Generic label for search, mostly used as placeholder text for searchbar */
 "label.search" = "Búsqueda";
 
@@ -96,6 +105,9 @@
 
 /* String to auto-fill if a user tried to share to a friend. */
 "settings.share.text" = "Únete a mi red social de relaciones verdaderas en HalloApp. Bájalo gratis en halloapp.com/dl ";
+
+/* Label above the list with whom you share */
+"share.composer.destinations.label" = "Compartir con";
 
 /* Placeholder for media caption. */
 "share.composer.placeholder" = "Escribe una descripción";
@@ -121,9 +133,6 @@
 /* Alert dialog title shown when uploading fails. */
 "share.composer.uploading.fail.title" = "Error al cargar";
 
-/* Alert dialog title shown when uploading begins. */
-"share.composer.uploading.title" = "Cargando...";
-
 /* Contacts category label */
 "share.destination.contacts" = "Contactos";
 
@@ -132,6 +141,9 @@
 
 /* Share on the home feed label */
 "share.destination.home" = "Inicio";
+
+/* Share on the home feed selection cell */
+"share.destination.new" = "Nueva publicación";
 
 /* Destination screen title */
 "share.destination.title" = "HalloApp";
@@ -142,6 +154,15 @@
 /* Title of alert when user is not logged in */
 "share.notlogged.title" = "No has iniciado sesión";
 
+/* Row in Settings screen */
+"title.privacy" = "Privacidad";
+
 /* Displayed in place of contact name if name is not known. */
 "unknown.contact" = "Contacto desconocido";
+
+/* How many bytes from total have been uploaded */
+"uploading.bytes.progress" = "%1$@ de %2$@";
+
+/* Message how many items are currently being upload */
+"uploading.n.items" = "\nuploading.n.items\n";
 
