--- a/Share Extension/ru.lproj/Localizable.strings
+++ b/Share Extension/ru.lproj/Localizable.strings
@@ -76,6 +76,15 @@
 /* Title for generic delete button. */
 "Delete" = "Удалить";
 
+/* Describes what 'All Contacts' feed privacy setting means. */
+"feed.privacy.descr.all" = "Поделиться со всеми моими контактами";
+
+/* Describes what 'All Contacts' feed privacy setting means. */
+"feed.privacy.descr.except" = "Поделиться с моими контактами, кроме людей, которых я выберу";
+
+/* Describes what 'All Contacts' feed privacy setting means. */
+"feed.privacy.descr.only" = "Поделиться только с выбранными контактами";
+
 /* Generic label for search, mostly used as placeholder text for searchbar */
 "label.search" = "Поиск";
 
@@ -96,6 +105,9 @@
 
 /* String to auto-fill if a user tried to share to a friend. */
 "settings.share.text" = "Присоединяйся к моей сети настоящих отношений в HalloApp. Скачай бесплатно на halloapp.com/dl";
+
+/* Label above the list with whom you share */
+"share.composer.destinations.label" = "Поделиться с";
 
 /* Placeholder for media caption. */
 "share.composer.placeholder" = "Напиши описание";
@@ -121,9 +133,6 @@
 /* Alert dialog title shown when uploading fails. */
 "share.composer.uploading.fail.title" = "Не удалось загрузить";
 
-/* Alert dialog title shown when uploading begins. */
-"share.composer.uploading.title" = "Загрузка...";
-
 /* Contacts category label */
 "share.destination.contacts" = "Контакты";
 
@@ -132,6 +141,9 @@
 
 /* Share on the home feed label */
 "share.destination.home" = "Главная";
+
+/* Share on the home feed selection cell */
+"share.destination.new" = "Новый пост";
 
 /* Destination screen title */
 "share.destination.title" = "HalloApp";
@@ -142,6 +154,15 @@
 /* Title of alert when user is not logged in */
 "share.notlogged.title" = "Не выполнен вход";
 
+/* Row in Settings screen */
+"title.privacy" = "Конфиденциальность";
+
 /* Displayed in place of contact name if name is not known. */
 "unknown.contact" = "Неизвестный контакт";
+
+/* How many bytes from total have been uploaded */
+"uploading.bytes.progress" = "%1$@ of %2$@";
+
+/* Message how many items are currently being upload */
+"uploading.n.items" = "uploading.n.items";
 
