--- a/Halloapp/nl.lproj/Localizable.strings
+++ b/Halloapp/nl.lproj/Localizable.strings
@@ -730,6 +730,12 @@
 /* Text shown in the email body when sending logs from the help screen */
 "help.send.logs.email.body" = "\n\n\nBeschrijf het probleem of de feedback in de ruimte hierboven alsjeblieft.\n\nVersie %1$@ - %2$@\n%3$@";
 
+/* Text shown to users on failed audio capture alert during a call. */
+"home.calls.fail.audio.text" = "Probeer later opnieuw.";
+
+/* Title of failed audio capture alert during a call. */
+"home.calls.fail.audio.title" = "Kan geen audio opnemen tijdens een HalloApp-oproep.";
+
 /* Text shown to users on call failure. */
 "home.calls.fail.text" = "Zorg ervoor dat je telefoon internetverbinding heeft en probeer opnieuw.";
 
