--- a/Halloapp/de.lproj/InfoPlist.strings
+++ b/Halloapp/de.lproj/InfoPlist.strings
@@ -2,14 +2,14 @@
 "CFBundleName" = "HalloApp";
 
 /* Privacy - Camera Usage Description */
-"NSCameraUsageDescription" = "Du kannst damit Fotos und Videos direkt aus HalloApp heraus aufnehmen.";
+"NSCameraUsageDescription" = "So kannst du Fotos und Videos direkt aus HalloApp heraus aufnehmen.";
 
 /* Privacy - Contacts Usage Description */
 "NSContactsUsageDescription" = "Lade deine Kontakte auf die HalloApp-Server hoch, um die Beiträge deiner Freunde zu sehen, und sie auch deine sehen zu lassen.";
 
 /* Privacy - Microphone Usage Description */
-"NSMicrophoneUsageDescription" = "Du kannst damit Videos mit Ton aufnehmen.";
+"NSMicrophoneUsageDescription" = "So kannst du Anrufe tätigen, Audiobeiträge und Nachrichten senden und Videos mit Ton aufnehmen.";
 
 /* Privacy - Photo Library Usage Description */
-"NSPhotoLibraryUsageDescription" = "Du kannst damit Fotos und Videos aus deiner Bibliothek teilen und die aufgenommenen speichern.";
+"NSPhotoLibraryUsageDescription" = "So kannst du Fotos und Videos aus deiner Bibliothek teilen und die aufgenommenen speichern.";
 
