--- a/Halloapp/nl.lproj/Localizable.strings
+++ b/Halloapp/nl.lproj/Localizable.strings
@@ -142,6 +142,12 @@
 /* Label for button that toggles speakerphone status during call */
 "call.button.speaker" = "luidspreker";
 
+/* Title for call history event. Appears next to details of a successful call. */
+"call.history.voice.call" = "Spraakoproep";
+
+/* Title for call history event. Appears next to details of a missed call. */
+"call.history.voice.call.missed" = "Gemiste spraakoproep";
+
 /* Status displayed when outgoing call starts */
 "call.status.calling" = "belt...";
 
@@ -463,6 +469,9 @@
 /* Label for floating compose post menu on Group screen. */
 "fab.post.button" = "Post";
 
+/* Text shown in place of a received post we are not able to decrypt yet. */
+"feed.comment.waiting" = "Wachten op deze reactie. Dit kan even duren.";
+
 /* Shown while content is being retracted from feed */
 "feed.deleting" = "Wordt verwijderd...";
 
@@ -516,6 +525,9 @@
 
 /* Shown when receiving a new (unsupported) type of post. */
 "feed.post.unsupported" = "Je versie van HalloApp ondersteunt dit type post niet.";
+
+/* Text shown in place of a received post we are not able to decrypt yet. */
+"feed.post.waiting" = "Wachten op deze post. Dit kan even duren.";
 
 /* Shown while content is being posted to feed */
 "feed.posting" = "Wordt geplaatst...";
@@ -756,6 +768,12 @@
 
 /* Title of update notice shown to users who have old versions of the app */
 "home.update.notice.title" = "Deze versie is verouderd";
+
+/* Text shown to users on video call failure. */
+"home.video.calls.fail.text" = "Binnenkort beschikbaar...";
+
+/* Title of failed video call screen alert. */
+"home.video.calls.fail.title" = "Video-oproepen worden op dit moment niet ondersteund.";
 
 /* Title of action sheet that allows the user to choose between sms and whatsapp to invite contact */
 "invite.action.sheet.title" = "%@ uitnodigen via...";
@@ -1333,6 +1351,9 @@
 /* String to auto-fill if a user tried to share to a friend. */
 "settings.share.text" = "Sluit je aan bij mijn netwerk voor échte relaties op HalloApp. Download gratis op halloapp.com/dl";
 
+/* Label for call bar (shows at top of screen during active call). Returns user to call screen when tapped. */
+"tap.return.call" = "tik om terug te gaan naar oproep";
+
 /* One of the items in context menu presented upon long press on web link. */
 "textlabel.context.menu.add.reading.list" = "Toevoegen aan Leeslijst";
 
@@ -1461,6 +1482,9 @@
 
 /* Message asking if the user is sure they want to unblock this user */
 "user.unblock.message" = "Weet je zeker dat je %@ wilt deblokkeren op HalloApp? Je kunt dit later altijd weer aanpassen.";
+
+/* Button to start voice call. Should be translated as verb. */
+"user.voice.call" = "Bellen";
 
 /* Reference to the user, second person pronoun */
 "user.you" = "je";
